--- a/package.json
+++ b/package.json
@@ -4,15 +4,17 @@
   "scripts": {
     "codegen": "graph codegen",
     "build": "graph build",
-    "deploy": "graph deploy --node https://api.studio.thegraph.com/deploy/ vivid-limited",
-    "create-local": "graph create --node http://localhost:8020/ vivid-limited",
-    "remove-local": "graph remove --node http://localhost:8020/ vivid-limited",
-    "deploy-local": "graph deploy --node http://localhost:8020/ --ipfs http://localhost:5001 vivid-limited",
+    "deploy": "graph deploy --product hosted-service acaldas/vividlimited",
+    "create-local": "graph create --node http://localhost:8020/ acaldas/vividlimited",
+    "remove-local": "graph remove --node http://localhost:8020/ acaldas/vividlimited",
+    "deploy-local": "graph deploy --node http://localhost:8020/ --ipfs http://localhost:5001 acaldas/vividlimited",
     "test": "graph test"
   },
   "dependencies": {
     "@graphprotocol/graph-cli": "0.38.0",
     "@graphprotocol/graph-ts": "0.29.1"
   },
-  "devDependencies": { "matchstick-as": "0.5.0" }
+  "devDependencies": {
+    "matchstick-as": "0.5.0"
+  }
 }
